--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
         </activity>
 
         <activity android:name=".MainActivity"/>
-        <activity android:name=".PasswordActivity"/>
+        <activity android:name=".EditPasswordActivity"/>
+        <activity android:name=".ViewPasswordActivity"/>
+
         <activity
             android:name="com.dropbox.client2.android.AuthActivity"
             android:launchMode="singleTask"
