--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Tue Apr 09 21:32:43 SAST 2019
+#Fri Mar 05 11:56:33 SAST 2021
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-5.3-rc-2-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-rc-1-bin.zip
